[metadata]
name = pywda
author = "DimCyan"
summary = WebDriverAgent Client Library written in Python
license = MIT
description-file = https://github.com/DimCyan/pywda
home-page = https://github.com/DimCyan/pywda
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
packages =
	pywda